# blackboxmc

./: .gitignore  README.md  build.gradle  build.sh  settings.gradle
debug/spigot/: eula.txt
include/: net_ioixd_blackbox_BiConsumerLink.h  net_ioixd_blackbox_Native.h
native/: Cargo.toml
native/src/: lib.rs  loader.rs  shared.rs  wasm.rs
src/main/java/net/ioixd/blackbox/: BiConsumerLink.java  BlackBox.java  BlackBoxPlugin.java  BlackBoxPluginLoader.java  BlackBoxPluginMeta.java  FallbackPluginLoader.java  Native.java
src/main/java/net/ioixd/blackbox/exceptions/: MissingFunctionException.java  NativeLibraryLoadException.java  NativeLibrarySymbolLoadException.java
src/main/java/net/ioixd/blackbox/extendables/: ExtendableBiomeProvider.java  ExtendableBlockPopulator.java  ExtendableBukkitRunnable.java  ExtendableChunkGenerator.java  ExtendableCommandExecutor.java  ExtendableConfigurationSerializable.java  ExtendableConsumer.java  ExtendableConversationCanceller.java  ExtendableConversationPrefix.java  ExtendableFileConfiguration.java  ExtendableHelpTopic.java  ExtendableHelpTopicFactory.java  ExtendableMapRenderer.java  ExtendableMetadataValue.java  ExtendableNoiseGenerator.java  ExtendablePersistentDataType.java  ExtendablePlugin.java  ExtendablePluginBase.java  ExtendablePluginLoader.java  ExtendablePrompt.java  ExtendableTabCompleter.java  ExtendableTabExecutor.java  Misc.java  __skipped__ExtendableConfiguration  __skipped__ExtendableFileConfiguration  __skipped__ExtendableFileConfiguration.java
src/main/resources/: .gitignore  plugin.yml
