[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
lazy_static = "1.4.0"
libloading = "0.8.0"
once_cell = "1.18.0"
parking_lot = "0.12.1"
wasi-common = "12.0.1"
wasmtime = "12.0.1"


[lib]
crate_type = ["cdylib"]
